user model refactor
